tests/NormalTests/paczka2/big_fuzzy/64100178.err
Error in line 1: WQo32F A95 6,4
Error in line 3: A23 A95 28,5
Error in line 12: jHnIAAmJC A95 56,7
Error in line 18: dd6 A213 27,7
Error in line 30: WQo32F A95 74,7
Error in line 45: Sg3W4I S434 -5,2
Error in line 48: Sg3W4I A23 41,4
Error in line 42: LUchSKDfW S434 20,8
Error in line 53: jHnIAAmJC A23 90,4
Error in line 55: LUchSKDfW A23 56,5
Error in line 54: Sg3W4I A213 3,2
Error in line 70: Sg3W4I A23 5,4
Error in line 81: hY7pFAk A23 96,4
Error in line 84: hY7pFAk S434 20,6
Error in line 92: Sg3W4I S434 1,7
Error in line 99: LUchSKDfW A95 20,6
Error in line 110: jHnIAAmJC A23 27,8
Error in line 115: A23 A213 77,6
Error in line 97: WQo32F A95 53,6
Error in line 126: jHnIAAmJC A23 79,2
Error in line 120: WQo32F A213 487,0
Error in line 130: WQo32F A95 39,9
Error in line 132: WQo32F S434 68,9
Error in line 135: WQo32F A213 -3,3
Error in line 134: WQo32F A213 90,6
Error in line 142: hY7pFAk A23 0,1
Error in line 145: hY7pFAk S434 41,2
Error in line 128: A23 A95 30,1
Error in line 153: LUchSKDfW A95 45,4
Error in line 151: dd6 A23 362,5
Error in line 169: Sg3W4I A23 93,1
Error in line 180: Sg3W4I S434 97,1
Error in line 189: Sg3W4I A23 86,5
Error in line 203: dd6 A213 37,2
Error in line 205: dd6 S434 46,2
Error in line 222: hY7pFAk A23 9,26
Error in line 221: hY7pFAk A95 13,3
Error in line 216: Sg3W4I S434 24,0
Error in line 226: Sg3W4I A95 96,6
Error in line 224: A23 A23 71,5
Error in line 240: hY7pFAk S434 6,1
